[package]
name = "scroxy"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.4.0"
env_logger = "0.9.0"
log = "0.4"
hyper = { version = "1.0.0-rc.4", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1.0-rc.3"
hyper-util = { git = "https://github.com/hyperium/hyper-util.git" }
cdb = "0.6.0"
clap = { version = "4.4.7", features = ["derive"] }
serde = { version = "1.0.192", features = ["derive"] }
async-trait = "0.1.74"
futures = "0.3.29"
